// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Choice with an heading without crashing 1`] = `
<div
  className="formGroup"
>
  
  <div
    className="control-label controlLabel"
  >
    heading
  </div>
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders Choice with radio buttons without crashing 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with checked from route 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={true}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with custom style 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className="customThemeClass"
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customThemeClass customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className="customThemeClass"
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with custom style disabled 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className="customThemeClass"
        disabled={true}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customThemeClass customMargin"
        disabled={true}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className="customThemeClass"
        disabled={true}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with default checked without crashing 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={true}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked from route if it is not an option 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked from route if it is the other name 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with no default checked if it's not an option 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a Choice with optionsPerRow set without crashing 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={3}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={false}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={false}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;

exports[`Renders a disabled Choice without crashing 1`] = `
<div
  className="formGroup"
>
  
  
  <div
    className="radioContainer false"
    data-options-per-row={null}
  >
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopA"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opA"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopA"
        id={0}
      >
        Option A
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopB"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opB"
      />
      <label
        className="customMargin"
        disabled={true}
        htmlFor="testopB"
        id={1}
      >
        Option B
      </label>
    </div>
    <div
      className="radioButton"
    >
      <input
        checked={false}
        id="testopC"
        name="test"
        onChange={[Function]}
        required={false}
        type="radio"
        value="opC"
      />
      <label
        className=""
        disabled={true}
        htmlFor="testopC"
        id={2}
      >
        Option C
      </label>
    </div>
  </div>
</div>
`;
